--- a/resume.css
+++ b/resume.css
@@ -7,6 +7,7 @@
 
 .photo{
     float:right;
+    padding-right: 200px;
 }
 
 .extrainf{
@@ -14,4 +15,9 @@
 }
 body{
     background-color: rgb(128, 120, 120);
+}
+
+footer{
+    background-color:grey;
+    padding:50px;
 }
